# AetherMind

./: .clang-format  .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  GEMINI.md  README.md
ammalloc/: AGENTS.md  CMakeLists.txt  GEMINI.md
ammalloc/include/ammalloc/: ammalloc.h  central_cache.h  common.h  config.h  page_allocator.h  page_cache.h  page_heap_scavenger.h  size_class.h  span.h  thread_cache.h
ammalloc/src/: ammalloc.cpp  central_cache.cpp  common.cpp  config.cpp  page_allocator.cpp  page_cache.cpp  page_heap_scavenger.cpp  span.cpp  thread_cache.cpp
src/: CMakeLists.txt  allocator.cpp  any.cpp  c_api_error.cpp  cpu_allocator.cpp  data_type.cpp  device.cpp  dispatcher.cpp  env.cpp  format.cpp  function.cpp  function_schema.cpp  interned_strings.cpp  object.cpp  operator_name.cpp  scalar.cpp  storage_impl.cpp  symbol.cpp  tensor.cpp  tensor_bk.cpp  tensor_impl.cpp  tensor_type.cpp  traceback.cpp  type.cpp  union_type.cpp
src/ammalloc/: ammalloc.cpp  central_cache.cpp  config.cpp  memory_pool.cpp  page_allocator.cpp  page_cache.cpp  span.cpp  thread_cache.cpp
src/backend/: backend.cpp  backend_registry.cpp  dispatcher_bridge.cpp  kernel_registry.cpp  kernel_selector.cpp
src/backend/cpu/: cpu_backend.cpp  cpu_capabilities.cpp  cpu_info.cpp  cpu_weight_prepacker.cpp  cpu_workspace_arena.cpp
src/base/: mmap_file.cpp  shape_and_stride.cpp  shape_constraint_evaluator.cpp  shape_symbol.cpp  symbol_constraint_solver.cpp  tensor.cpp  tensor_view.cpp
src/container/: amstring.cpp  array.cpp  array_impl.cpp  map.cpp  map_depr.cpp  string.cpp
src/dtypes/: bfloat16.cpp  data_type.cpp  float8_e4m3fn.cpp  float8_e5m2.cpp  half.cpp
src/execution/: execution_plan.cpp  execution_plan_builder.cpp  executor.cpp  kv_cache_manager.cpp  kv_cache_view.cpp  layer_runner.cpp  runtime_binding_context.cpp
src/memory/: allocator.cpp  allocator_registration.cpp  cann_allocator.cpp  cpu_allocator.cpp  cuda_allocator.cpp  storage_impl.cpp
src/migration/: tensor_compat.cpp
src/model/: backend_sidecar.cpp  model_instance.cpp  model_instance_builder.cpp  model_loader.cpp  model_validator.cpp  model_weight_index.cpp  resolved_model_weights.cpp  resolved_tensor_index.cpp  weight_prepack_planner.cpp
src/model/graph/: const_eval_add.cpp  const_eval_internal.h  const_eval_mul.cpp  const_eval_silu.cpp  const_eval_silu_mul.cpp  const_eval_utils.cpp  const_evaluator.cpp  constant_folding_pass.cpp  dead_code_elimination_pass.cpp  graph.cpp  graph_builder.cpp  graph_dump.cpp  graph_lowering.cpp  graph_op_builder.cpp  graph_pass_manager.cpp  graph_pass_pipeline.cpp  graph_rewrite.cpp  model_graph.cpp  model_graph_builder.cpp  op_params_serde.cpp  operator_schema.cpp  silu_mul_fusion_pass.cpp  state_alias_plan.cpp
src/modules/: ammalloc_module.cpp  ammalloc_module.ixx  ammemory_pool_module.cpp  ammemory_pool_module.ixx  amstring_module.cpp  amstring_module.ixx  check_module.ixx  concept_module.ixx  lru_module.ixx  memory_pool_module.ixx  string_module.cpp  string_module.ixx  test_module.cpp  test_module.ixx  test_module_impl.cpp
src/modules/ammalloc/: ammemory_pool_module.cpp  ammemory_pool_module.ixx  config.ixx  size_class.ixx
src/operators/: add_op.cpp  argmax_op.cpp  attention_op.cpp  elementwise_mul_op.cpp  embedding_op.cpp  kvcache_update_op.cpp  linear_op.cpp  matmul_op.cpp  op_type.cpp  operator_inference.cpp  operator_name.cpp  operator_registry.cpp  operator_semantics.cpp  rms_norm_op.cpp  rmsnorm_op.cpp  rope_op.cpp  silu_mul_op.cpp  silu_op.cpp  softmax_op.cpp
src/runtime/: runtime_builder.cpp  runtime_context.cpp  runtime_registration.cpp
src/shape_inference/: broadcast.cpp  shape_constraint_evaluator.cpp  shape_symbol.cpp  symbol_constraint_solver.cpp
src/type_system/: list_type.cpp  tensor_type.cpp  tuple_type.cpp  type.cpp  union_type.cpp
src/utils/: bfloat16.cpp  float8_e4m3fn.cpp  float8_e5m2.cpp  half.cpp  memory_utils.cpp  thread_local_debug_info.cpp
test/: CMakeLists.txt  tensor_test.cpp  test_any.cpp  test_array.cpp  test_array_view.cpp  test_bfloat16.cpp  test_central_cache.cpp  test_complex.cpp  test_data_type.cpp  test_device.cpp  test_error.cpp  test_float8_e4m3fn.cpp  test_float8_e5m2.cpp  test_floating_point_utils.cpp  test_function.cpp  test_half.cpp  test_interned_strings.cpp  test_list_type.cpp  test_main.cpp  test_map.cpp  test_map_perf.cpp  test_memory_format.cpp  test_memory_pool.cpp  test_memory_pool_perf.cpp  test_object.cpp  test_operator_name.cpp  test_page_allocator.cpp  test_page_cache.cpp  test_qualified_name.cpp  test_scalar.cpp  test_size_class.cpp  test_storage.cpp  test_string.cpp  test_string_functionality.cpp  test_string_perf.cpp  test_symbol.cpp  test_tensor.cpp  test_tensor_type.cpp  test_thread.cpp  test_thread_cache.cpp  (+3 more)
tests/benchmark/: CMakeLists.txt  benchmark_amstring.cpp  benchmark_cpu_dot_product_avx2.cpp  benchmark_cpu_rmsnorm_kernel.cpp  benchmark_memory_pool.cpp  benchmark_page_allocator.cpp  benchmark_page_cache.cpp  benchmark_size_class.cpp  benchmark_string.cpp  test_map_perf.cpp  test_string_perf.cpp
tests/unit/: CMakeLists.txt  test_any.cpp  test_array.cpp  test_array_view.cpp  test_backend_registry.cpp  test_c_api_error.cpp  test_cpu_allocator.cpp  test_cpu_backend.cpp  test_cpu_resolve_kernel.cpp  test_cpu_rmsnorm_kernel.cpp  test_cpu_weight_prepacker.cpp  test_device.cpp  test_dispatcher_bridge.cpp  test_execution_plan.cpp  test_execution_plan_builder.cpp  test_execution_plan_immutability.cpp  test_executor_backend_path.cpp  test_float8_e4m3fn.cpp  test_hf_directory_reader.cpp  test_hf_safetensors_index.cpp  test_kernel_registry.cpp  test_kernel_registry_resolve.cpp  test_kernel_selector.cpp  test_kv_cache_manager.cpp  test_map_perf.cpp  test_model_instance.cpp  test_no_hotpath_resolve.cpp  test_object.cpp  test_op_kernel_context.cpp  test_op_type.cpp  test_operator_name.cpp  test_page_allocator.cpp  test_page_cache.cpp  test_runtime_backend_integration.cpp  test_scalar.cpp  test_size_class.cpp  test_span.cpp  test_status.cpp  test_storage.cpp  test_tensor.cpp  (+7 more)
tests/unit/base/: test_any.cpp  (+17 more)
(+673 files in other folders)
